changed module namespace to app, removed psr4 module loading

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ifw\\": "framework/",
-            "test\\" : "modules/test"
+            "ifw\\": "framework/"
         }
     },
     "config": {
